<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/background_gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_description" />

    <TableLayout
        android:id="@+id/game_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="110dp"
        android:stretchColumns="*"
        android:shrinkColumns="*" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/hearts_background"
            android:padding="8dp"
            android:text="@string/score_label"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:elevation="10dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/score_description" />

        <TextView
            android:id="@+id/text_odometer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/hearts_background"
            android:padding="8dp"
            android:text="@string/odometer_label"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:elevation="10dp"
            android:layout_marginEnd="4dp" />

        <TextView
            android:id="@+id/text_coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/hearts_background"
            android:padding="8dp"
            android:text="@string/coins_label"
            android:textColor="#FFD700"
            android:textSize="14sp"
            android:textStyle="bold"
            android:elevation="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_hearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:background="@drawable/hearts_background"
        android:padding="6dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/heart1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart_description" />

        <ImageView
            android:id="@+id/heart2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="2dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart_description" />

        <ImageView
            android:id="@+id/heart3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="2dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart_description" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/button_background"
            android:src="@android:drawable/ic_media_previous"
            android:elevation="10dp"
            android:contentDescription="@string/button_left_description" />

        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_background"
            android:src="@android:drawable/ic_media_next"
            android:elevation="10dp"
            android:contentDescription="@string/button_right_description" />

    </RelativeLayout>

</FrameLayout>

